# platonic-solids

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
thinks/platonic_solids/: generate_models.cc  platonic_solids.h  platonic_solids_test.cc
